# python_venv_fixer

./: LICENSE  README.md  pyproject.toml
src/pyvenvfixer/: __init__.py
src/vefixer/: __init__.py
