[project]
name = "vefixer"
version = "0.1.0"
description = "Find all Python virtualenvs and fix them up to use current virtualenv manager."
authors = [
    {name = "John Gaines", email = "me@jgaines.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
vefixer = "vefixer.__init__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.2",
    "ipython>=8.22.1",
]
