[project]
name = "python_venv_fixer"
description = "Find all Python virtualenvs and fix them up to use current virtualenv manager."
# https://backend.pdm-project.org/metadata/#dynamic-project-version
dynamic = ["version"]
authors = [
    {name = "John Gaines", email = "me@jgaines.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pyvenvfixer = "pyvenvfixer.__init__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/pyvenvfixer/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.2",
    "ipython>=8.22.1",
]
